@@ -1,2 +1,5 @@
 # BEGIN_COPYRIGHT
 # END_COPYRIGHT
+
+from fasta import RawFastaReader
+from dbsnp import DbSnpReader
