@@ -1,3 +1,9 @@
+2011-07-29    <simleo@neuron.crs4.it>
+
+	* bl/core/utils/longest_subs.py: added.
+
+	* bl/core/seq/io/dbsnp.py: added.
+
 2011-07-25    <simleo@neuron.crs4.it>
 
 	* bl/core/utils/pspawner.py (ProcessSpawner.run): added an
